Creando elementos con valores enviados por el form
Además de eso también algunos cambios de estilo, arreglos en el footer y emprolijamiento general de clases CSS

--- a/adopcion.html
+++ b/adopcion.html
@@ -27,11 +27,11 @@
         </div>
     </header>
 
-    <div class="tituloIntermedio">
+    <div class="flex centrado">
         <h1>Quienes estan actualmente en transito, buscamos un hogar permanente</h1>
 
     </div>
-    <div class="tituloIntermedio">
+    <div class="flex centrado">
         <h3>¡Haz click en el boton para contactarte con nosotros!</h3>
 
     </div>
@@ -196,9 +196,13 @@
 
     <footer>
         <hr>
-        <article>
+        <div class="f-left">
+            <p style="margin:12px; padding-bottom: 20px; padding-top: 10px;">Política de privacidad</p>
+            <p style="margin:12px ;">Términos y condiciones</p>
+        </div>
+        <div>
             <div class="seccionDropDown f-right">
-                <div class="dropdown f-right">
+                <div class="dropdown">
                     <button class="dropdown-btn"> ¡Seguinos!</button>
                     <div class="dropdown-content">
                         <a href="https://www.facebook.com/" target="_blank"><img
@@ -211,19 +215,14 @@
                 </div>
 
             </div>
-            <img class="f-right" src="Gatitos/icons8-trasero-de-gato-100.png" alt="">
-        </article>
 
+        </div>
+        <img class="f-right" src="Gatitos/icons8-trasero-de-gato-100.png" alt="">
         <div class="flex centrado">
             <img src="IconsRedesSociales/icons8-copyright-all-rights-reserved-96.png" alt="">
-            <h4 style="color:#333 ;"> 2022-3022 DMICHIS S.A.</h4>
+            2022-3022 DMICHIS S.A.
         </div>
         <hr>
-        <div class="flex f-left">
-            <p style="margin:12px ;">Política de privacidad</p>
-            <p style="margin:12px ;">Términos y condiciones</p>
-        </div>
-
     </footer>
 
 </body>
