--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
 
             </section>
-            <div class="tituloIntermedio"">
+            <div class="flex centrado"">
              <img src=" Gatitos/icons8-vista-posterior-del-gato-64(2).png" alt="">
                 <h1>Algunos de nuestros candidatos más peludos</h1><img
                     src=" Gatitos/icons8-vista-posterior-del-gato-64(2).png" alt="">
@@ -109,9 +109,13 @@
     </main>
     <footer>
         <hr>
-        <article>
+        <div class="f-left">
+            <p style="margin:12px; padding-bottom: 20px; padding-top: 10px;">Política de privacidad</p>
+            <p style="margin:12px ;">Términos y condiciones</p>
+        </div>
+        <div>
             <div class="seccionDropDown f-right">
-                <div class="dropdown f-right">
+                <div class="dropdown">
                     <button class="dropdown-btn"> ¡Seguinos!</button>
                     <div class="dropdown-content">
                         <a href="https://www.facebook.com/" target="_blank"><img
@@ -124,21 +128,17 @@
                 </div>
 
             </div>
-            <img class="f-right" src="Gatitos/icons8-trasero-de-gato-100.png" alt="">
-        </article>
 
+        </div>
+        <img class="f-right" src="Gatitos/icons8-trasero-de-gato-100.png" alt="">
         <div class="flex centrado">
             <img src="IconsRedesSociales/icons8-copyright-all-rights-reserved-96.png" alt="">
             2022-3022 DMICHIS S.A.
         </div>
         <hr>
-        <div class="flex f-left">
-            <p style="margin:12px ;">Política de privacidad</p>
-            <p style="margin:12px ;">Términos y condiciones</p>
-        </div>
-
     </footer>
-    <script src="main.js"></script>
+
 </body>
+<script src="main.js"></script>
 
 </html>
