Centrando logo del footer y detalles en hoja de estilos

--- a/contacto.html
+++ b/contacto.html
@@ -26,55 +26,42 @@
         </div>
     </header>
 
-
     <div class="flex centrado">
         <u>
             <h2>Dejanos tu mensaje</h2>
         </u>
-
     </div>
     <section class="seccion contacto flex centrado">
-
         <form onsubmit="return validar()">
-
             <label for="nombre">Nombre: </label>
             <br>
             <div id="divErrorNom">
-            </div><br>
-
+            </div>
+            <br>
             <input type="text" id="nombre" name="nombre" placeholder="Nombre"><br><br>
             <label for="email">Correo Electronico: </label><br>
             <div id="divErrorMail">
-
             </div>
             <br>
-
             <input type="text" id="email" placeholder="Ejemplo@mail.com"><br><br>
             <label for="mensaje">¡Dejanos tu mensaje!</label><br>
             <div id="divErrorMens">
-
             </div>
             <br>
-
             <textarea name="mensaje" id="mensaje" cols="30" rows="10"
                 placeholder="¡Hola! Quisiera adoptar a uno de sus gatos..."></textarea><br><br>
             <input class="submit" type="submit" value="Enviar">
         </form>
-
     </section>
 
     <div class="flex" style="min-height:100px; padding:20px;">
-
         <ul id="ulFormEnviado" style="list-style-type: square;">
-
-
         </ul>
-
     </div>
 
     <footer>
         <hr>
-        <div class="f-left" style="min-width:22%;">
+        <div class="f-left" style="min-width:350px;">
             <p style="margin:12px; padding-bottom: 20px; padding-top: 10px;">Política de privacidad</p>
             <p style="margin:12px ;">Términos y condiciones</p>
         </div>
@@ -91,9 +78,7 @@
                                 src="IconsRedesSociales/icons8-instagram-50.png" alt=""></a>
                     </div>
                 </div>
-
             </div>
-
         </div>
         <img class="f-right" src="Gatitos/icons8-trasero-de-gato-100.png" alt="">
         <div class="flex centrado">
@@ -169,6 +154,4 @@
         }
     </script>
 </body>
-
-
 </html>
