--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </main>
     <footer>
         <hr>
-        <div class="f-left">
+        <div class="f-left" style="min-width:350px;">
             <p style="margin:12px; padding-bottom: 20px; padding-top: 10px;">Política de privacidad</p>
             <p style="margin:12px ;">Términos y condiciones</p>
         </div>
@@ -126,9 +126,7 @@
                                 src="IconsRedesSociales/icons8-instagram-50.png" alt=""></a>
                     </div>
                 </div>
-
             </div>
-
         </div>
         <img class="f-right" src="Gatitos/icons8-trasero-de-gato-100.png" alt="">
         <div class="flex centrado">
@@ -137,8 +135,8 @@
         </div>
         <hr>
     </footer>
-
+    <script src="main.js"></script>
 </body>
-<script src="main.js"></script>
+
 
 </html>
